<resources>
    <string name="app_name">Mandarin</string>
    <string name="core_service">Mandarin Core Service</string>
    <string name="menu_search">Поиск</string>
    <string name="account">Профиль</string>
    <string name="accounts">Профили</string>
    <string name="add_account">Добавить профиль</string>
    <string name="edit_account">Редактировать</string>
    <string name="remove_account">Удалить</string>
    <string name="account_add_fail">Извините, не удалось добавить профиль.</string>
    <string name="account_already_exists">Добавляемый профиль уже существует!</string>
    <string name="add_buddy">Добавить в список контактов</string>
    <string name="create_dialog">Создать диалог</string>
    <string name="settings">Настройки</string>
    <string name="info">Информация</string>
    <string name="rate_application">Оценить приложение</string>
    <string name="all_projects">Все проекты</string>
    <string name="dialogs">Диалоги</string>
    <string name="close_chat">Закрыть диалог</string>
    <string name="close_chat_short">Закрыть</string>
    <string name="buddy_info">Анкета</string>
    <string name="select_all">Выбрать все</string>
    <string name="clear_history">Очистить историю</string>
    <string name="enter_your_message">Ваше сообщение</string>
    <string name="error_bubble">Не удалось загрузить сообщение. Переустановите программу и эта ошибка исчезнет
        навсегда.
    </string>
    <string name="select_buddy">Выберите контакт</string>
    <string name="status_offline">Не в сети</string>
    <string name="status_mobile">Мобильный</string>
    <string name="status_online">В сети</string>
    <string name="status_invisible">Невидимый</string>
    <string name="status_chat">Рад пообщаться</string>
    <string name="status_away">Отошёл</string>
    <string name="status_dnd">Не беспокоить</string>
    <string name="status_na">Недоступен</string>
    <string name="status_busy">Занят</string>
    <string name="error_remove_account">Извините, произошла ошибка при удалении профиля</string>
    <string name="recycle">Корзина</string>
    <string name="message_copy">Копировать</string>
    <string name="message_remove">Удалить</string>
    <string name="message_unread">Не прочитано</string>
    <string name="message_share">Поделиться</string>
    <string name="clear_history_title">Очистить историю?</string>
    <string name="clear_history_text">Сейчас будет очищена вся переписка с этим контактом. Продолжить?</string>
    <string name="yes_clear">Да</string>
    <string name="do_not_clear">Отмена</string>
    <string name="selected_items">%d выбрано</string>
    <string name="yes_remove">Удалить</string>
    <string name="remove_accounts_title">Удалить профили?</string>
    <string name="remove_accounts_text">Сейчас будут удалены выбранные профили и сохранённая переписка. Это действие
        нельзя отменить. Продолжить?
    </string>
    <string name="remove_account_title">Удалить профиль?</string>
    <string name="remove_account_text">Сейчас будет удалён открытый профиль и сохранённая переписка. Это действие нельзя
        отменить. Продолжить?
    </string>
    <string name="do_not_remove">Нет</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="error_clearing_history">Извините, произошла ошибка в процессе очистки истории.</string>
    <string name="error_sending_message">Не удалось отправить сообщение!</string>
    <string name="filter_show_all_buddies">Все контакты</string>
    <string name="filter_show_online_only">Только в сети</string>
    <string name="account_connecting">Пожалуйста, подождите немного. Идёт подключение.</string>
    <string name="account_shutdowning">Пожалуйста, подождите немного. Идёт отключение.</string>
    <plurals name="count_new_messages">
        <item quantity="one">%d новое сообщение</item>
        <item quantity="few">%d новых сообщения</item>
        <item quantity="other">%d новых сообщений</item>
    </plurals>
    <string name="reply_now">Ответить</string>
    <string name="open_chats">Диалоги</string>
    <string name="share_messages_via">Поделиться сообщением через</string>
    <string name="connect_account_message">Этот профиль ещё не подключен. Подключить сейчас?</string>
    <string name="connect_account_title">Подключить профиль</string>
    <string name="connect_yes">Подключить</string>
    <string name="connect_no">Не сейчас</string>
    <string name="pref_buddy_list_title">Список контактов</string>
    <string name="pref_summary_show_temp">Показывать временных в списке контактов</string>
    <string name="pref_title_show_temp">Временные контакты</string>
    <string name="pref_notifications_title">Уведомления</string>
    <string name="pref_title_notification_sound">Сигнал уведомления</string>
    <string name="pref_summary_notification_sound">Воспроизвести определённый тоновый сигнал о сообщении</string>
    <string name="pref_title_sound">Звук</string>
    <string name="pref_title_vibrate">Вибрация</string>
    <string name="buddy_status">Статус</string>
    <string name="pref_chat_title">Переписка</string>
    <string name="pref_title_collapse_messages">Объединение сообщений</string>
    <string name="pref_summary_collapse_messages">Объединять входящие и исходящие сообщения, которые были написаны в
        течение двух минут
    </string>
    <string name="pref_base_title">Основное</string>
    <string name="pref_title_autorun">Фоновый автозапуск</string>
    <string name="pref_summary_autorun">Оставаться на связи даже после перезагрузки телефона</string>
    <string name="error_show_buddy_info">Ошибка при попытке открыть информацию о контакте</string>
    <string name="info_status">Статус</string>
    <string name="info_base">Основное</string>
    <string name="info_extended">Дополнительно</string>
    <string name="buddy_info_share">Поделиться</string>
    <string name="buddy_info_copy">Копировать</string>
    <string name="share_buddy_info_via">Поделиться контактом через</string>
    <string name="buddy_info_copied">Информация скопирована в буфер обмена</string>
    <string name="status_copied">Текст статуса скопирован в буфер обмена</string>
    <string name="error_show_account_info">Ошибка при попытке открыть информацию о профиле</string>
    <string name="account_info">Профиль</string>
    <string name="account_connect">Подключить</string>
    <string name="account_shutdown">Отключить</string>
    <string name="account_remove">Удалить</string>
    <string name="unable_to_connect_account">Не удалось подключиться к сети. Попробуйте перезайти в приложение.</string>
    <string name="unable_to_shutdown_account">Не удалось отключить профиль от сети. Попробуйте перезайти в приложение.
    </string>
    <string name="unable_to_setup_status">Не удалось поменять статус профиля. Попробуйте перезайти в приложение.
    </string>
    <string name="status_message_hint">Изменить подпись статуса…</string>
    <string name="status_message_change_hint">Подпись статуса…</string>
    <string name="click_to_connect_hint">Нажмите здесь для подключения</string>
    <string name="apply">Применить</string>
    <string name="not_now">Не сейчас</string>
    <string name="clear">Очистить</string>
    <string name="friendly_name">Ник</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="birth_date">День рождения</string>
    <string name="city">Город</string>
    <string name="children">Дети</string>
    <string name="smoking">Курение</string>
    <string name="website">Сайт</string>
    <string name="about_me">О себе</string>
    <string name="info_yes">да</string>
    <string name="info_no">нет</string>
    <string name="male">муж.</string>
    <string name="female">жен.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="smiley_item">Смайлик</string>
    <string name="status_icq_shop">Магазины</string>
    <string name="status_icq_duck">В ванной</string>
    <string name="status_icq_tired">Устал</string>
    <string name="status_icq_party">Вечеринка</string>
    <string name="status_icq_beer">Пиво</string>
    <string name="status_icq_think">Думаю</string>
    <string name="status_icq_eating">Кушаю</string>
    <string name="status_icq_tv">Телевизор</string>
    <string name="status_icq_friends">Друзья</string>
    <string name="status_icq_coffee">Кофе</string>
    <string name="status_icq_music">Музыка</string>
    <string name="status_icq_business">Дела</string>
    <string name="status_icq_cinema">Кино</string>
    <string name="status_icq_fun">Развлекаюсь</string>
    <string name="status_icq_phone">На телефоне</string>
    <string name="status_icq_game">Играю</string>
    <string name="status_icq_study">Учусь</string>
    <string name="status_icq_sick">Болею</string>
    <string name="status_icq_sleeping">Сплю</string>
    <string name="status_icq_surfing">Отрываюсь</string>
    <string name="status_icq_internet">В интернете</string>
    <string name="status_icq_working">Работаю</string>
    <string name="status_icq_typing">Пишу</string>
    <string name="status_icq_angry">Злой</string>
    <string name="status_icq_weekend">Отдыхаю</string>
    <string name="status_icq_psp">Приставка</string>
    <string name="status_icq_on_mobile">На мобильном</string>
    <string name="status_icq_asleep">Засыпаю</string>
    <string name="status_icq_wc">В туалете</string>
    <string name="status_icq_question">Вопрос</string>
    <string name="status_icq_way">В пути</string>
    <string name="status_icq_love">Любовь</string>
    <string name="status_icq_in_love">Влюблён</string>
    <string name="status_icq_search">Ищу</string>
    <string name="status_icq_diary">Дневник</string>
    <string name="no_dialogs_opened">Нажмите на кнопку создания диалога внизу, чтобы начать общаться!</string>
    <string name="pref_title_chat_background">Фоновая заставка</string>
    <string name="app_title">Mandarin IM</string>
    <string name="tomclaw_software">TomClaw Software</string>
    <string name="developer_info">Главный автор и программист - Солкин Игорь Викторович. Приложение не является
        официальным клиентом ICQ, разрабатывается по многочисленным просьбам и просто из личного интереса автора.\n
        <b>Дизайн - SAMURAY</b>
    </string>
    <string name="app_year">2014 г.</string>
    <string name="buddy_info_search">Анкетные данные</string>
    <string name="keyword_search">ID, имя или фамилия</string>
    <string name="age_and_gender_search">Возраст и пол</string>
    <string name="buddy_online_search">Сейчас онлайн</string>
    <string name="city_search">Город</string>
    <string name="send_file">Отправить файл</string>
    <string name="fill_the_fields_below">Заполните поля ниже</string>
    <string name="email_or_uin_hint">E-mail или UIN</string>
    <string name="password_hint">Пароль</string>
    <string name="tiny_icq_client">Лёгкий ICQ клиент</string>
    <string name="enter_phone_number">Введите номер Вашего телефона</string>
    <string name="privacy_policy">Продолжая, Вы принимаете <a href="http://www.icq.com/legal/privacypolicy/ru">Политику
        Конфиденциальности</a>.
    </string>
    <string name="phone_number_faq">
        <u>Для чего Мандарину мой номер телефона?</u>
    </string>
    <string name="send_picture">Изображение</string>
    <string name="send_video">Видео</string>
    <string name="send_document">Документ</string>
    <string name="use_login_and_password">У меня есть логин и пароль</string>
    <string name="register_using_phone">Ещё нет учётной записи?\n
        <u>Зарегистрируйтесь, используя Ваш номер телефона!</u>
    </string>
    <string name="nfc_share">NFC</string>
    <string name="buddy_ignore">Игнорировать</string>
    <string name="account_instance">Закрыть сессии</string>
    <string name="export_history">Экспорт истории</string>
</resources>