<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="never|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:icon="@drawable/ic_attach_file"
        app:showAsAction="ifRoom"
        android:title="@string/send_file">
        <menu>
            <item
                android:id="@+id/send_picture_menu"
                app:showAsAction="ifRoom"
                android:title="@string/send_picture" />
            <item
                android:id="@+id/send_video_menu"
                app:showAsAction="ifRoom"
                android:title="@string/send_video" />
            <item
                android:id="@+id/send_document_menu"
                app:showAsAction="ifRoom"
                android:title="@string/send_document" />
        </menu>
    </item>
    <item
        android:id="@+id/buddy_info_menu"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"
        android:title="@string/buddy_info" />
    <item
        android:id="@+id/close_chat_menu"
        android:icon="@drawable/ic_close_dialog"
        app:showAsAction="never"
        android:title="@string/close_chat" />
    <item
        android:id="@+id/clear_history_menu"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"
        android:title="@string/clear_history" />
    <item
        android:id="@+id/export_history_menu"
        app:showAsAction="never"
        android:title="@string/export_history" />
</menu>