<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/buddy_info_copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom|withText"
        android:title="@string/buddy_info_copy" />
    <item
        android:id="@+id/buddy_info_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom|withText"
        android:title="@string/buddy_info_share">
        <menu>
            <item
                android:id="@+id/nfc_share"
                android:title="@string/nfc_share" />
        </menu>
    </item>
    <item
        android:id="@+id/buddy_ignore"
        app:showAsAction="never"
        android:title="@string/buddy_ignore" />
</menu>