<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/message_copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom|withText"
        android:title="@string/message_copy" />
    <item
        android:id="@+id/message_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom|withText"
        android:title="@string/message_share" />
    <item
        android:id="@+id/message_remove"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"
        android:title="@string/message_remove" />
    <item
        android:id="@+id/message_unread"
        app:showAsAction="never"
        android:title="@string/message_unread" />
</menu>