<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account_shutdown"
        android:icon="@drawable/ic_disconnect"
        android:title="@string/account_shutdown"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/buddy_info_share"
        android:icon="@drawable/ic_share"
        android:title="@string/buddy_info_share"
        app:showAsAction="ifRoom">
        <menu></menu>
    </item>
    <item
        android:id="@+id/account_instance"
        android:title="@string/account_instance"
        app:showAsAction="never" />
    <item
        android:id="@+id/account_remove"
        android:icon="@drawable/ic_delete"
        android:title="@string/account_remove"
        app:showAsAction="never" />
</menu>
