<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/first_screen_bg" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <com.tomclaw.design.TightTextView
            style="@style/IntroHeaderView"
            android:paddingBottom="7dp"
            android:text="@string/fill_the_fields_below" />

        <EditText
            android:id="@+id/user_id_field"
            style="@style/IntroEditField"
            android:layout_marginBottom="16dp"
            android:hint="@string/email_or_uin_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/user_password_field"
            style="@style/IntroEditField"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </LinearLayout>

    <com.tomclaw.design.TightTextView
        android:id="@+id/register_using_phone_view"
        style="@style/PrivacyPolicyView"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dp"
        android:text="@string/register_using_phone"
        android:textSize="14sp" />

</RelativeLayout>
