<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mandarin="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <com.tomclaw.mandarin.main.views.TightTextView
                style="@style/FormHeader"
                android:text="@string/buddy_info_search" />

            <EditText
                android:id="@+id/keyword_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keyword_search"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_search"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.tomclaw.mandarin.main.views.TightTextView
                style="@style/FormHeader"
                android:layout_marginTop="10dp"
                android:text="@string/age_and_gender_search"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.tomclaw.mandarin.main.views.AgePickerView
                    android:id="@+id/age_range"
                    style="?spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/abc_spinner_mtrl_am_alpha"
                    android:padding="10dp"
                    android:textSize="16sp"
                    mandarin:ageMax="99"
                    mandarin:ageMin="16"
                    mandarin:valueMax="26"
                    mandarin:valueMin="19" />

                <Spinner
                    android:id="@+id/gender_selector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/online_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/buddy_online_search"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <include layout="@layout/toolbar_shadow_view" />
    </FrameLayout>
</LinearLayout>