<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/first_screen_bg" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        android:background="@android:color/transparent" />

    <com.tomclaw.design.TightTextView
        style="@style/IntroHeaderView"
        android:layout_above="@+id/phone_number_block"
        android:text="@string/enter_phone_number" />

    <LinearLayout
        android:id="@+id/phone_number_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            style="@style/PhoneNumberBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.tomclaw.design.TightTextView
                android:id="@+id/country_code_view"
                style="@style/CountryCodeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingEnd="4dp"
                android:paddingRight="4dp" />

            <EditText
                android:id="@+id/phone_number_field"
                style="@style/PhoneNumberView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxWidth="250dp"
                android:minWidth="172dp" />

        </LinearLayout>

        <com.tomclaw.design.TightTextView
            android:id="@+id/country_name_view"
            style="@style/CountryNameView"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp" />

    </LinearLayout>

    <com.tomclaw.design.TightTextView
        android:id="@+id/phone_number_faq_view"
        style="@style/PrivacyPolicyView"
        android:layout_above="@+id/privacy_policy_view"
        android:paddingBottom="1dp"
        android:text="@string/phone_number_faq" />

    <com.tomclaw.design.TightTextView
        android:id="@+id/privacy_policy_view"
        style="@style/PrivacyPolicyView"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dp"
        android:text="@string/privacy_policy" />

</RelativeLayout>
